--- a/templates/person.html
+++ b/templates/person.html
@@ -4,6 +4,6 @@
 
 {{ render_partial('partials/page/person.html',
 person=person, selected_exercise_ids=selected_exercise_ids, max_date=max_date,
-min_date=min_date) }}
+min_date=min_date, tags=tags) }}
 
 {% endblock %}
