--- a/templates/partials/stats.html
+++ b/templates/partials/stats.html
@@ -1,4 +1,4 @@
-<div class="mt-4 w-full grid grid-cols-1 md:grid-cols-3 2xl:grid-cols-4 xl:grid-cols-5 gap-4">
+<div class="mt-4 mb-4 w-full grid grid-cols-1 md:grid-cols-3 2xl:grid-cols-4 gap-4">
     {% for stat in stats %}
     <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
         <div class="flex items-center">
